@@ -1,3 +1,5 @@
+[SIZE="5"][COLOR="Magenta"]In the next release I will be making a couple code changes, and these may result in you needing to re-bind your keys. Back them up now! Take a screenshot of them or write them down.[/COLOR][/SIZE]
+
 Tired of wasting a quickslot on things like Assistants, the Antiquarian's Eye, or certain often-used mementos? Assign them to a keybind instead!
 
 Tools
